--- a/MZCroppableView/Base.lproj/Main_iPhone.storyboard
+++ b/MZCroppableView/Base.lproj/Main_iPhone.storyboard
@@ -12,10 +12,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="zFn-XO-5ps" customClass="MZCroppingImageView">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="iM3-xc-qxO" customClass="MZCroppingScrollView">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </imageView>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="lPA-uv-yoA"/>
+                                </connections>
+                            </scrollView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="d95-h9-xzK">
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -26,6 +29,12 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="oUF-LR-9Jy"/>
+                                    <barButtonItem title="Mode" id="Sv6-6K-ivt">
+                                        <connections>
+                                            <action selector="editModeButtonTapped:" destination="vXZ-lx-hvc" id="j5O-pd-6I7"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Ec5-0s-g1b"/>
                                     <barButtonItem title="Crop" id="GMB-Kv-f9B">
                                         <connections>
                                             <action selector="cropButtonTapped:" destination="vXZ-lx-hvc" id="Rbh-ST-j0P"/>
@@ -37,7 +46,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <outlet property="croppingImageView" destination="zFn-XO-5ps" id="XpZ-cj-75Z"/>
+                        <outlet property="editModeButton" destination="d95-h9-xzK" id="iZn-uL-JUp"/>
+                        <outlet property="scrollView" destination="iM3-xc-qxO" id="Ikb-Mk-V5n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
