--- a/MZCroppableView/Base.lproj/Main_iPhone.storyboard
+++ b/MZCroppableView/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -8,18 +8,22 @@
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="JOj-3j-HS7"/>
+                        <viewControllerLayoutGuide type="bottom" id="IkR-qv-YxQ"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="iM3-xc-qxO" customClass="MZCroppingScrollView">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iM3-xc-qxO" customClass="MZCroppingScrollView">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <connections>
                                     <outlet property="delegate" destination="vXZ-lx-hvc" id="lPA-uv-yoA"/>
                                 </connections>
                             </scrollView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="d95-h9-xzK">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d95-h9-xzK">
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
@@ -44,6 +48,15 @@
                             </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="d95-h9-xzK" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="H4f-Y2-6g4"/>
+                            <constraint firstItem="d95-h9-xzK" firstAttribute="top" secondItem="iM3-xc-qxO" secondAttribute="bottom" id="KaB-au-4OW"/>
+                            <constraint firstItem="iM3-xc-qxO" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="RGy-EW-Pl6"/>
+                            <constraint firstAttribute="trailing" secondItem="d95-h9-xzK" secondAttribute="trailing" id="Zyk-Le-QVp"/>
+                            <constraint firstAttribute="trailing" secondItem="iM3-xc-qxO" secondAttribute="trailing" id="aYl-Hi-E6K"/>
+                            <constraint firstItem="iM3-xc-qxO" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="kYA-ca-agF"/>
+                            <constraint firstItem="IkR-qv-YxQ" firstAttribute="top" secondItem="d95-h9-xzK" secondAttribute="bottom" id="zV0-R6-oad"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="editModeButton" destination="d95-h9-xzK" id="iZn-uL-JUp"/>
