--- a/MZCroppableView/Base.lproj/Main_iPhone.storyboard
+++ b/MZCroppableView/Base.lproj/Main_iPhone.storyboard
@@ -16,13 +16,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iM3-xc-qxO" customClass="MZCroppingScrollView">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <connections>
-                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="lPA-uv-yoA"/>
-                                </connections>
-                            </scrollView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6ko-De-uHx" customClass="MZZoomingCropView">
+                                <rect key="frame" x="0.0" y="20" width="320" height="504"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d95-h9-xzK">
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -50,17 +48,17 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="d95-h9-xzK" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="H4f-Y2-6g4"/>
-                            <constraint firstItem="d95-h9-xzK" firstAttribute="top" secondItem="iM3-xc-qxO" secondAttribute="bottom" id="KaB-au-4OW"/>
-                            <constraint firstItem="iM3-xc-qxO" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="RGy-EW-Pl6"/>
+                            <constraint firstItem="6ko-De-uHx" firstAttribute="top" secondItem="JOj-3j-HS7" secondAttribute="bottom" id="Jlt-bh-do4"/>
+                            <constraint firstItem="6ko-De-uHx" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="TDh-tf-bkQ"/>
+                            <constraint firstItem="d95-h9-xzK" firstAttribute="top" secondItem="6ko-De-uHx" secondAttribute="bottom" id="ZIU-9O-VAd"/>
                             <constraint firstAttribute="trailing" secondItem="d95-h9-xzK" secondAttribute="trailing" id="Zyk-Le-QVp"/>
-                            <constraint firstAttribute="trailing" secondItem="iM3-xc-qxO" secondAttribute="trailing" id="aYl-Hi-E6K"/>
-                            <constraint firstItem="iM3-xc-qxO" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="kYA-ca-agF"/>
+                            <constraint firstAttribute="trailing" secondItem="6ko-De-uHx" secondAttribute="trailing" id="qWD-0s-mTF"/>
                             <constraint firstItem="IkR-qv-YxQ" firstAttribute="top" secondItem="d95-h9-xzK" secondAttribute="bottom" id="zV0-R6-oad"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="editModeButton" destination="d95-h9-xzK" id="iZn-uL-JUp"/>
-                        <outlet property="scrollView" destination="iM3-xc-qxO" id="Ikb-Mk-V5n"/>
+                        <outlet property="zoomingCropView" destination="6ko-De-uHx" id="GIr-vO-xWE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
